# Kinect-Denoising-and-Segmentation-Evaluation

./: Doxyfile.in  README.md
doc/html/: annotated.html  annotated.js  classes.html  classjcv__kinect__denoising_1_1_hole_filling-members.html  classjcv__kinect__denoising_1_1_hole_filling.html  classjcv__kinect__denoising_1_1_hole_filling.js  classjcv__kinect__denoising_1_1_temporal_denoise-members.html  classjcv__kinect__denoising_1_1_temporal_denoise.html  classjcv__kinect__denoising_1_1_temporal_denoise.js  dir_530751f33fa2060aedc448a8405526cc.html  dir_530751f33fa2060aedc448a8405526cc.js  dir_5a35836f895a0820d8009fe409012cea.html  dir_5a35836f895a0820d8009fe409012cea.js  dir_6b8c4915e67c4b255c5c9e851026d9cf.html  dir_6fdc6f64446b1125e6fccf5d2a0ec549.html  dir_7475e842edb1ee0b54fd3a28d4c02713.html  dir_9953d94860ff072ad809d319d1144228.html  dir_9953d94860ff072ad809d319d1144228.js  dir_e10f4cbaff2ef50052e7d96cca16149b.html  dir_e10f4cbaff2ef50052e7d96cca16149b.js  files.html  files.js  functions.html  functions_func.html  functions_vars.html  group__jcv__kinect__denoising.html  group__jcv__kinect__denoising.js  index.html  jcv__hole__filling_2include_2jcv__debug_8hpp_source.html  jcv__hole__filling_8hpp_source.html  jcv__temporal__denoising_2include_2jcv__debug_8hpp_source.html  jcv__temporal__denoising_8hpp_source.html  kinect__denoise_8dox.html  kinect_denoise.dox  modules.html  modules.js  namespacejcv__kinect__denoising.html  namespacejcv__kinect__denoising.js  namespaces.html  namespaces.js  (+2 more)
doc/html/search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  groups_0.js  namespaces_0.js  pages_0.js  search.js  variables_0.js  variables_1.js  variables_3.js  variables_5.js
jcv_hole_filling/: CMakeLists.txt  CMakeLists.txt~  package.xml
jcv_hole_filling/include/: jcv_hole_filling.hpp
jcv_hole_filling/launch/: jcv_hole_filling.launch
jcv_hole_filling/src/: jcv_hole_filling.cpp  main.cpp
jcv_kinect_denoising/: CMakeLists.txt  DoxygenCMakeLists.txt  package.xml
jcv_temporal_denoising/: CMakeLists.txt  package.xml
jcv_temporal_denoising/include/: jcv_debug.hpp  jcv_temporal_denoising.hpp
jcv_temporal_denoising/launch/: jcv_temporal_denoising.launch
jcv_temporal_denoising/src/: jcv_debug.cpp  jcv_temporal_denoising.cpp  main.cpp
