<?xml version="1.0"?>
<package>
  <name>jcv_hole_filling</name>
  <version>0.0.1</version>
  <description>
	  This package is for filling invalid pixels (0 or NAN) in kinect frames and refining them(denoising spatial noise).
	  This method is based on: 
  	  "Depth hole filling using the depth distribution of neighboring regions of depth holes in the Kinect sensor"
	  DOI: 10.1109/ICSPCC.2012.6335696
  </description>

  <maintainer email="va.azizi@gmail.com">Vahid Azizi</maintainer>

  <license>TODO</license>

  <url type="website">http://robotics.jacobs-university.de/</url>
  
  <url type="repository">TODO</url>

  <author email="va.azizi@gmail.com">Vahid Azizi</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export></export>
</package>
